--- a/src/assets/scssAdmin/_products.scss
+++ b/src/assets/scssAdmin/_products.scss
@@ -1,190 +1,171 @@
 .products_manager_admin {
   position: relative;
   margin-top: 17vh;
-  // background-color: $dark-grey;
-  // color: #fff;
   font-family: $vt-font;
   .button {
     font-family: $vt-font;
     outline: none;
-    // color: #fff;
     border: none;
     border-radius: 20px;
     text-transform: uppercase;
     &:hover {
       opacity: 0.7;
     }
-}
-.products__list_item_admin {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.products__header_admin {
-  // display: flex;
-  width: 24%;
-  padding: 20px 0;
-}
-
-.product__manager_controls_admin {
-  margin-right: 30px;
-  button {
-    font-size: 3em;
-    // width: 100px;
-
-    margin: 0 10px;
   }
-  .add__product-btn {
-    background-image: url('../img/additem.svg');
-    background-size: cover;
-    margin-left: 90%;
-    // margin-right: auto;
-    width: 70px;
-    height: 70px;
-    // background-color: $blue;
-    &:hover{
-      // background-color: $dark-grey;
-    }
-    &:focus,
-    &:active {
-      background-color: black;
-    }
+  .products__list_item_admin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .products__header_admin {
+    width: 24%;
+    padding: 20px 0;
   }
 
-}
-.product__card_admin {
-  box-shadow: 0 7px 4px #777;
-  border-bottom: 5px solid $dark-grey;
-  border-top: 5px solid $dark-grey;
-  width: 86%;
-  // height: 230px;
-  padding: 2em 0;
-  border-radius: 20px;
-  background-color: #fff;
-  // border: red solid 3px;
-  margin: 2em 0;
-  color: #000;
-  letter-spacing: 3px;
-  display: flex;
-
-  align-items: center;
-  justify-content: space-around;
-}
-.proudct__top_info_admin {
-  align-self: flex-start;
-  margin-left: 10px;
-  flex-grow: 1;
-}
-.product_id_admin {
-  margin-top: 30px;
-  font-size: 1.45em;
-}
-.product__title_admin {
-  font-size: 2em;
-  width: 250px;
-  text-transform: uppercase;
-  text-align: center;
-  margin: auto 0 auto 20px;
-  font-weight: bold;
-}
-.product__middle {
-  display: flex;
-  align-items: center;
-  width: 50%;
-  flex-grow: 2;
-  justify-content: space-around;
-}
-.product__img_admin {
-  height: 150px;
-  width: 150px;
-
-}
-.product__description_admin {
-  width: 60%;
-  font-size: 1.65em;
-  text-align: center;
-}
-.product__price_admin {
-  font-size: 3em;
-  margin-right: 30px;
-  font-weight: bold;
-}
-
-.product__controls_admin {
-  margin-right: 10px;
-  button {
-    font-family: $vt-font;
-    font-size: 2em;
-    width: 120px;
-    outline: none;
-    // color: #fff;
+  .product__manager_controls_admin {
+    margin-right: 30px;
+    button {
+      font-size: 3em;
+      margin: 0 10px;
+    }
+    .add__product-btn {
+      background-image: url("../img/additem.svg");
+      background-size: cover;
+      margin-left: 90%;
+      @include dimensions(70px, 70px);
+      &:hover {
+      }
+      &:focus,
+      &:active {
+        background-color: black;
+      }
+    }
+  }
+  .product__card_admin {
+    box-shadow: 0 7px 4px #777;
+    border-bottom: 5px solid $dark-grey;
+    border-top: 5px solid $dark-grey;
+    width: 86%;
+    padding: 2em 0;
     border-radius: 20px;
-    padding: 5px 0;
-    margin: .75em 0;
+    background-color: #fff;
+    margin: 2em 0;
+    color: #000;
+    letter-spacing: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .proudct__top_info_admin {
+    align-self: flex-start;
+    margin-left: 10px;
+    flex-grow: 1;
+  }
+  .product_id_admin {
+    margin-top: 30px;
+    font-size: 1.45em;
+  }
+  .product__title_admin {
+    font-size: 2em;
+    width: 250px;
     text-transform: uppercase;
-    display: block;
+    text-align: center;
+    margin: auto 0 auto 20px;
+    font-weight: bold;
   }
-  .product__edit_button {
-    background-color: $green;
-    &:focus,
-    &:active {
-      background-color: #f0f0f0;
-      color: $green;
+  .product__middle {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    flex-grow: 2;
+    justify-content: space-around;
+  }
+  .product__img_admin {
+    @include dimensions(150px, 150px);
+  }
+  .product__description_admin {
+    width: 60%;
+    font-size: 1.65em;
+    text-align: center;
+  }
+  .product__price_admin {
+    font-size: 3em;
+    margin-right: 30px;
+    font-weight: bold;
+  }
+
+  .product__controls_admin {
+    margin-right: 10px;
+    button {
+      font-family: $vt-font;
+      font-size: 2em;
+      width: 120px;
+      outline: none;
+      border-radius: 20px;
+      padding: 5px 0;
+      margin: 0.75em 0;
+      text-transform: uppercase;
+      display: block;
     }
-  }
-  .product__delete_button {
-    background-color: $red;
-    &:focus,
-    &:active {
-      background-color: #f0f0f0;
-      color: $red;
+    .product__edit_button {
+      background-color: $green;
+      &:focus,
+      &:active {
+        background-color: #f0f0f0;
+        color: $green;
+      }
+    }
+    .product__delete_button {
+      background-color: $red;
+      &:focus,
+      &:active {
+        background-color: #f0f0f0;
+        color: $red;
+      }
     }
   }
 }
 
-}
-
-.productForm,.newProduct, .editProduct, #newForm {
+.productForm,
+.newProduct,
+.editProduct,
+#newForm {
   padding: 10px 0;
-	box-shadow: 0 7px 4px #777;
-  ::placeholder{
+  box-shadow: 0 7px 4px #777;
+  ::placeholder {
     text-transform: uppercase;
     color: $dark-grey;
   }
-position: fixed;
-z-index: 20;
-left: 50%;
-top: 50%;
-transform: translate(-50%, -50%);
-background-color: #fff;
-
+  position: fixed;
+  z-index: 20;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
   width: 70%;
-// background-color: rgba($color: #000000, $alpha:.51);
-// background-color: rgba($color: #000000, $alpha: 1);
   display: none;
   flex-direction: column;
-  // justify-content: space-between;
   margin: 0 auto;
-border-radius: 30px;
+  border-radius: 30px;
 
-  input,textarea {
-    height: 90px;
-    width: 70%;
+  input,
+  textarea {
+    @include dimensions(90px, 70px);
     border: none;
     border-bottom: 2px solid #eee;
     font-size: 2em;
     font-family: $vt-font;
     text-align: center;
     margin: 0 auto;
-    &:focus{
-outline: 2px solid $dark-grey;
+    &:focus {
+      outline: 2px solid $dark-grey;
     }
   }
-  textarea{
+  textarea {
     height: 120px !important;
     resize: none;
   }
-  label{
+  label {
     text-align: center;
     text-transform: uppercase;
     font-size: 1.25em;
@@ -205,54 +186,52 @@ outline: 2px solid $dark-grey;
       color: $blue;
     }
   }
-
 }
 button:disabled,
-button[disabled]{
- display: none;
+button[disabled] {
+  display: none;
 }
 
-.productFormSlideIn{
+.productFormSlideIn {
   display: flex;
 }
-.formOverlay, .deleteOverlay{
+.formOverlay,
+.deleteOverlay {
   height: 100%;
   width: 100%;
+  @include dimensions(100%, 100%);
   display: none;
   position: fixed;
   z-index: 10;
   top: 0;
   right: 0;
-  background-color: rgba($color: $dark-grey, $alpha: .7)
+  background-color: rgba($color: $dark-grey, $alpha: 0.7);
 }
 
-.confirmationMessage{
-position: absolute;
-width: 50%;
-height: 250px;
-font-size: 4em;
-display: none;
-z-index: 20;
-background-color: $red;
-text-align: center;
-border-radius: 30px;
-.confirmationButton{
-  font-size: 1em;
-margin: 1rem;
+.confirmationMessage {
+  position: absolute;
+  @include dimensions(250px, 50%);
+  font-size: 4em;
+  display: none;
+  z-index: 20;
+  background-color: $red;
+  text-align: center;
+  border-radius: 30px;
+  .confirmationButton {
+    font-size: 1em;
+    margin: 1rem;
+  }
+  .noDelete {
+    color: $green;
+  }
+  .yesDelete {
+    background-color: #fff;
+    color: #000;
+  }
 }
-.noDelete{
-  color: $green
-}
-.yesDelete{
-  background-color: #fff;
-color: #000;
-}
-};
-
 
 .admin__header_links {
   padding: 20px 0;
-  // font-size: 4em;
   margin-left: 16px;
   border-bottom: 2px solid #000;
   display: inline;
@@ -262,13 +241,10 @@ color: #000;
   font-family: $vt-font;
   text-decoration: none;
   display: inline-block;
-
-
-  a{
+  a {
     color: black;
   }
-&:hover{
-  color: $babyblue;
-
-}
+  &:hover {
+    color: $babyblue;
+  }
 }
