--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1250,7 +1250,7 @@ button:hover, button:active {
   outline: none;
   border-radius: 20px;
   padding: 5px 0;
-  margin: .75em 0;
+  margin: 0.75em 0;
   text-transform: uppercase;
   display: block;
 }
@@ -1273,7 +1273,10 @@ button:hover, button:active {
   color: #FF0015;
 }
 
-.productForm, .newProduct, .editProduct, #newForm {
+.productForm,
+.newProduct,
+.editProduct,
+#newForm {
   padding: 10px 0;
   -webkit-box-shadow: 0 7px 4px #777;
           box-shadow: 0 7px 4px #777;
@@ -1294,29 +1297,48 @@ button:hover, button:active {
   border-radius: 30px;
 }
 
-.productForm ::-webkit-input-placeholder, .newProduct ::-webkit-input-placeholder, .editProduct ::-webkit-input-placeholder, #newForm ::-webkit-input-placeholder {
+.productForm ::-webkit-input-placeholder,
+.newProduct ::-webkit-input-placeholder,
+.editProduct ::-webkit-input-placeholder,
+#newForm ::-webkit-input-placeholder {
   text-transform: uppercase;
   color: #2D2D2D;
 }
 
-.productForm :-ms-input-placeholder, .newProduct :-ms-input-placeholder, .editProduct :-ms-input-placeholder, #newForm :-ms-input-placeholder {
+.productForm :-ms-input-placeholder,
+.newProduct :-ms-input-placeholder,
+.editProduct :-ms-input-placeholder,
+#newForm :-ms-input-placeholder {
   text-transform: uppercase;
   color: #2D2D2D;
 }
 
-.productForm ::-ms-input-placeholder, .newProduct ::-ms-input-placeholder, .editProduct ::-ms-input-placeholder, #newForm ::-ms-input-placeholder {
+.productForm ::-ms-input-placeholder,
+.newProduct ::-ms-input-placeholder,
+.editProduct ::-ms-input-placeholder,
+#newForm ::-ms-input-placeholder {
   text-transform: uppercase;
   color: #2D2D2D;
 }
 
-.productForm ::placeholder, .newProduct ::placeholder, .editProduct ::placeholder, #newForm ::placeholder {
+.productForm ::placeholder,
+.newProduct ::placeholder,
+.editProduct ::placeholder,
+#newForm ::placeholder {
   text-transform: uppercase;
   color: #2D2D2D;
 }
 
-.productForm input, .productForm textarea, .newProduct input, .newProduct textarea, .editProduct input, .editProduct textarea, #newForm input, #newForm textarea {
+.productForm input,
+.productForm textarea,
+.newProduct input,
+.newProduct textarea,
+.editProduct input,
+.editProduct textarea,
+#newForm input,
+#newForm textarea {
   height: 90px;
-  width: 70px;
+  width: 70%;
   border: none;
   border-bottom: 2px solid #eee;
   font-size: 2em;
@@ -1325,23 +1347,39 @@ button:hover, button:active {
   margin: 0 auto;
 }
 
-.productForm input:focus, .productForm textarea:focus, .newProduct input:focus, .newProduct textarea:focus, .editProduct input:focus, .editProduct textarea:focus, #newForm input:focus, #newForm textarea:focus {
+.productForm input:focus,
+.productForm textarea:focus,
+.newProduct input:focus,
+.newProduct textarea:focus,
+.editProduct input:focus,
+.editProduct textarea:focus,
+#newForm input:focus,
+#newForm textarea:focus {
   outline: 2px solid #2D2D2D;
 }
 
-.productForm textarea, .newProduct textarea, .editProduct textarea, #newForm textarea {
+.productForm textarea,
+.newProduct textarea,
+.editProduct textarea,
+#newForm textarea {
   height: 120px !important;
   resize: none;
 }
 
-.productForm label, .newProduct label, .editProduct label, #newForm label {
+.productForm label,
+.newProduct label,
+.editProduct label,
+#newForm label {
   text-align: center;
   text-transform: uppercase;
   font-size: 1.25em;
   margin: 3px;
 }
 
-.productForm .submitButton, .newProduct .submitButton, .editProduct .submitButton, #newForm .submitButton {
+.productForm .submitButton,
+.newProduct .submitButton,
+.editProduct .submitButton,
+#newForm .submitButton {
   width: 35%;
   font-size: 2.75em;
   margin: 20px 0;
@@ -1353,7 +1391,13 @@ button:hover, button:active {
   color: #fff;
 }
 
-.productForm .submitButton:focus, .productForm .submitButton:active, .newProduct .submitButton:focus, .newProduct .submitButton:active, .editProduct .submitButton:focus, .editProduct .submitButton:active, #newForm .submitButton:focus, #newForm .submitButton:active {
+.productForm .submitButton:focus, .productForm .submitButton:active,
+.newProduct .submitButton:focus,
+.newProduct .submitButton:active,
+.editProduct .submitButton:focus,
+.editProduct .submitButton:active,
+#newForm .submitButton:focus,
+#newForm .submitButton:active {
   background-color: #f0f0f0;
   color: #235789;
 }
@@ -1369,7 +1413,10 @@ button[disabled] {
   display: flex;
 }
 
-.formOverlay, .deleteOverlay {
+.formOverlay,
+.deleteOverlay {
+  height: 100%;
+  width: 100%;
   height: 100%;
   width: 100%;
   display: none;
@@ -1382,8 +1429,8 @@ button[disabled] {
 
 .confirmationMessage {
   position: absolute;
-  width: 50%;
   height: 250px;
+  width: 50%;
   font-size: 4em;
   display: none;
   z-index: 20;
@@ -1523,14 +1570,15 @@ button[disabled] {
   color: #8b9ca4;
 }
 
-.customer__email, .customer__phn {
+.customer__email,
+.customer__phn {
   font-size: 2em;
   font-style: italic;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   padding: 0;
-  padding: .25em 0;
+  padding: 0.25em 0;
   text-align: center;
 }
 
@@ -1543,7 +1591,7 @@ button[disabled] {
   font-size: 2.5em;
   font-weight: bold;
   justify-self: baseline;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
   padding-bottom: 7px;
   border-bottom: 5px solid #2D2D2D;
 }
